# CGProjeto

./: .gitignore  README.md
Engine/: CMakeLists.txt  engine.cpp  engine.hpp
Engine/data/: teste.xml
Generator/: CMakeLists.txt  Generator.sln  box.cpp  box.hpp  cone.cpp  cone.hpp  generator  generator.cpp  generator.h  geometry.hpp  plane.cpp  plane.hpp  ponto.hpp  sphere.cpp  sphere.hpp
Generator/x64/Debug/: Generator.vcxproj.FileListAbsolute.txt  generator.exe.recipe  generator.ilk  vc143.idb
Generator/x64/Debug/generator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  generator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
parte1/: gen_eng_pipeline.sh
parte1/Engine/: CMakeLists.txt  engine.cpp  engine.hpp
parte2/Engine/: CMakeLists.txt  engine.cpp  engine.hpp
parte2/Engine/include/: Camera.hpp  Group.hpp  Model.hpp  Transform.hpp  Vector3.hpp  World.hpp  XMLParser.hpp  point.hpp
parte2/Engine/src/: camera.cpp  group.cpp  main.cpp  point.cpp  transform.cpp  vector3.cpp
parte2/Generator/: box.cpp
parte2/Teste/: CMakeLists.txt
parte2/Teste/include/: Vector3.hpp
parte2/Teste/src/: Model.cpp  Vector3.cpp  World.cpp  XMLParser.cpp  main.cpp
parte2/data/: box_2_3.3d  solarSystem.xml  solarsystem_nomoons.xml
parte3/Engine/: CMakeLists.txt
parte3/Engine/include/: Curva_CATMR_H.hpp  model.hpp  point.hpp  transform.hpp
parte3/Engine/src/: Curva_CATMR_H.cpp  main.cpp  model.cpp  point.cpp  transform.cpp  xmlParser.cpp
parte3/Generator/: Curva_CATMR_H.cpp  bezier.cpp  bezier.hpp  box.cpp  box.hpp  generator.cpp
parte3/data/: bezier_10.3d  sisSol.xml  solarSystem.xml
parte4/Engine/include/: Curva_CATMR_H.hpp  colours.hpp  group.hpp  lights.hpp  model.hpp  point.hpp  transform.hpp
parte4/Engine/src/: Curva_CATMR_H.cpp  colours.cpp  lights.cpp  main.cpp  model.cpp  transform.cpp  world.cpp  xmlParser.cpp
parte4/Generator/: CMakeLists.txt  bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  generator.cpp  generator.h  normals.cpp  normals.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  textures.cpp  textures.hpp
